// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PullSecretSection /> PullSecretSection Disabled should render 1`] = `
<Fragment>
  <Text
    component="p"
  >
    Download or copy your pull secret. The install program will prompt you for your pull secret during installation.
  </Text>
  <div>
    <Button
      isDisabled={true}
      onClick={[Function]}
      variant="secondary"
    >
      Download pull secret
    </Button>
    <Tooltip
      content="Copied!"
      isVisible={false}
      position="right"
      trigger="manual"
    >
      <CopyToClipboard
        onCopy={[Function]}
        text=""
      >
        <Button
          icon={
            <PasteIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
          }
          isDisabled={true}
          tabIndex={0}
          type="button"
          variant="link"
        >
          Copy pull secret
        </Button>
      </CopyToClipboard>
    </Tooltip>
  </div>
</Fragment>
`;

exports[`<PullSecretSection /> PullSecretSection should render 1`] = `
<Fragment>
  <Text
    component="p"
  >
    Download or copy your pull secret. The install program will prompt you for your pull secret during installation.
  </Text>
  <div>
    <Download
      content="{\\"error\\":\\"\\"}
"
      file="pull-secret"
      style={
        Object {
          "display": "inline",
        }
      }
    >
      <Button
        isDisabled={false}
        onClick={[Function]}
        variant="secondary"
      >
        Download pull secret
      </Button>
    </Download>
    <Tooltip
      content="Copied!"
      isVisible={false}
      position="right"
      trigger="manual"
    >
      <CopyToClipboard
        onCopy={[Function]}
        text="{\\"error\\":\\"\\"}
"
      >
        <Button
          icon={
            <PasteIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
          }
          isDisabled={false}
          tabIndex={0}
          type="button"
          variant="link"
        >
          Copy pull secret
        </Button>
      </CopyToClipboard>
    </Tooltip>
  </div>
</Fragment>
`;
